Adding tests as suggested.